# Grounded-Q-A-Assistant-Pro

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
data/: coastal_ecosystem_restoration.txt  responsible_machine_learning.txt  urban_heat_resilience.txt  zero_trust_security.txt
scratch/: dummy_app.py
scripts/: build_sample_pdf.py
source_documents/: orbital_debris_management.txt
src/document_qa/: __init__.py  __main__.py  chunking.py  cli.py  config.py  embeddings.py  generation.py  indexer.py  ingestion.py  models.py  rag.py  ui.py  vector_store.py
src/grounded_document_qa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_chunking.py  test_indexer.py  test_rag.py
